# SIMD_bitset_rotation

./: CMakeLists.txt  README.md
src/: main.cpp
src/bit_pack/x86/: bit_pack_x86.cpp  bit_pack_x86.hpp
src/bit_unpack/x86/: bit_unpack_x86.cpp  bit_unpack_x86.hpp
src/rshift/: rshift_avx2.hpp  rshift_sse4.hpp  rshift_x86.hpp
